# SlobyParser

./: LICENSE  README.md  pyproject.toml  setup.cfg
grammars/: python.sloby
slobyparser/: exceptions.py  lexer.py  token.py  tokens.py
slobyparser/common/: t_names.py
slobyparser/parsers/: slobyparser.py
slobyparser/tokens/: tokens_type.py
slobyparser/tools/: in_token.py
slobyparser/types/: token_types.py
