[metadata]
name = slobyparser
version = 0.0.1
author = Tamás Hadházy
author_email = hadhazytamas15@gmail.com
description = "For the sloby web projects"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved:: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = 3.10
include_package_data = True
